# CourseIQ

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
infra/: README.md  deploy_refresh_job.sh
src/ingest/: gcs_utils.py  madgrades_client.py  rmp_client.py
src/model/: train.py
src/pipeline/: features.py  gcs_to_bq.py  match_instructors.py  refresh.py
src/pipeline/sql/: schema.sql
tests/: test_features.py  test_match_instructors.py  test_train.py
